force-app/main/default/objects/Club_Opportunity_Product__c/Club_Opportunity_Product__c.object-meta.xml
<CustomObject>
    <label>Club Opportunity Product</label>
    <nameField>
        <displayFormat>LI-{00000000}</displayFormat>
        <label>Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Club Opportunity Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>