force-app/main/default/objects/Club_Opportunity_Product__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchased Products</relationshipLabel>
    <relationshipName>Club_Opportunity_Products</relationshipName>
    <type>Lookup</type>
</CustomField>