force-app/main/default/objects/Club_Opportunity_Product__c/fields/Joining_Fee__c.field-meta.xml
<CustomField>
    <fullName>Joining_Fee__c</fullName>
    <description>Added for reporting purposes</description>
    <formula>IF(AND( 
Opportunity__r.Name = &apos;New Membership&apos;, 
Joining_Fee_Waived__c = FALSE, 
Price__c &gt; 0, 
OR( 
AND( 
Product_Name__c = &apos;Paper Membership&apos;, 
OR(TEXT(Account__r.Payment_Method2__c) = &apos;Cash/Cheque&apos;, 
TEXT(Account__r.Payment_Method2__c) = &apos;Debit/Credit Card&apos;) 
), 
AND( 
Product_Name__c = &apos;Overseas Membership - Digital&apos;, 
TEXT(Account__r.Payment_Method2__c) = &apos;Debit/Credit Card&apos; 
) 
) 
),10,0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Joining Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>