force-app/main/default/objects/Club_Opportunity_Product__c/fields/Joining_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>Joining_Fee_Waived__c</fullName>
    <formula>Opportunity__r.Joining_Fee_Waived__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Joining Fee Waived</label>
    <type>Checkbox</type>
</CustomField>