force-app/main/default/objects/Club_Opportunity_Product__c/fields/Member_Section__c.field-meta.xml
<CustomField>
    <fullName>Member_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member / Section</label>
    <referenceTo>Member_Section__c</referenceTo>
    <relationshipLabel>Club Opportunity Products</relationshipLabel>
    <relationshipName>Club_Opportunity_Products</relationshipName>
    <type>Lookup</type>
</CustomField>