force-app/main/default/objects/Club_Opportunity_Product__c/fields/Net_Fee__c.field-meta.xml
<CustomField>
    <fullName>Net_Fee__c</fullName>
    <description>Added for reporting purposes</description>
    <formula>Price__c - Joining_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>