force-app/main/default/objects/Club_Opportunity_Product__c/fields/Non_Renewer_flag__c.field-meta.xml
<CustomField>
    <fullName>Non_Renewer_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Renewer flag</label>
    <type>Checkbox</type>
</CustomField>