force-app/main/default/objects/Club_Opportunity_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <valueField>Club_Product__c.RecordTypeId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Club_Product__c</referenceTo>
    <relationshipLabel>Club Opportunity Products</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>