force-app/main/default/objects/Club_Opportunity_Product__c/fields/Promotional_Code__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Code__c</fullName>
    <formula>IF( RecordType.DeveloperName==&apos;Membership_Code&apos; , Opportunity__r.Promotional_Code__r.Name, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotional Code</label>
    <type>Text</type>
</CustomField>