force-app/main/default/objects/Club_Opportunity_Product__c/fields/Report_Month__c.field-meta.xml
<CustomField>
    <fullName>Report_Month__c</fullName>
    <description>Added for reporting purposes - checks for RENEWALS due in a different month to the Opp Close Date - returns TRUE and filter on Membership report can exclude them.</description>
    <formula>IF( 
AND( 
Opportunity__r.Name = &apos;Renewal&apos;, 
DAY(Opportunity__r.CloseDate)/7 &gt;= 4, 
DAY(Renewal_Date__c) = 1, 
MONTH(Opportunity__r.CloseDate) &lt;&gt; MONTH(Renewal_Date__c) 
), 
TRUE, 
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Month</label>
    <type>Checkbox</type>
</CustomField>