force-app/main/default/objects/Club_Opportunity_Product__c/fields/Section_Leave_Date__c.field-meta.xml
<CustomField>
    <fullName>Section_Leave_Date__c</fullName>
    <label>Section Leave Date</label>
    <type>Date</type>
</CustomField>