force-app/main/default/objects/Club_Opportunity_Product__c/fields/Status2__c.field-meta.xml
<CustomField>
    <fullName>Status2__c</fullName>
    <formula>IMAGE( 
CASE(  Status__c , 
&quot;Active&quot;, &quot;/resource/0000000000000/blob_green_small&quot;, 
&quot;Superseded&quot;, &quot;/resource/0000000000000/blob_blue_small&quot;, 
&quot;Cancelled&quot;, &quot;/resource/0000000000000/blob_red_small&quot;, 
&quot;/resource/0000000000000/blob_orange_small&quot;), 
&quot;Status&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>