force-app/main/default/objects/Club_Opportunity_Product__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
            <value>
                <fullName>Non-Renewer</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>