force-app/main/default/objects/Club_Opportunity_Product__c/recordTypes/Associate_Membership.recordType-meta.xml
<RecordType>
    <fullName>Associate_Membership</fullName>
    <active>true</active>
    <label>Associate Membership</label>
</RecordType>