force-app/main/default/objects/Club_Opportunity_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>Member_Section__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Status2__c</columns>
    <columns>Section_Leave_Date__c</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>Opportunity_Record_Type__c</columns>
    <columns>Price__c</columns>
    <columns>Product__c</columns>
    <columns>Renewal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>