force-app/main/default/objects/Club_Opportunity_Product__c/listViews/Lapsed.listView-meta.xml
<ListView>
    <fullName>Lapsed</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Member_Section__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Status2__c</columns>
    <columns>Section_Leave_Date__c</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>Opportunity_Record_Type__c</columns>
    <columns>Price__c</columns>
    <columns>Product__c</columns>
    <columns>Renewal_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Lapsed</value>
    </filters>
    <label>Lapsed</label>
</ListView>